style.css
.summary {}

:root {
    --active-color: rgb(59, 59, 59);
    --background-color: rgb(12, 12, 12);


    /*
    6,6,25
    */
}

#container {
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    min-width: 480px;
    padding: 20px;
    width: 100%;
}

html {
    height: 95%
}

* {
    margin: 0;
    padding: 0;
}

.topbar {

    background-image: rgb(0, 255, 170);
    height: 20px;
    width: 100%;
}

.off_set {
    padding-left: 20px;
}

.skills {
    text-align: left;
    padding-left: 25px;
}

.experience {
    color: yellow;
}




.header {
    background: -webkit-linear-gradient(left, rgb(12, 136, 138) 0%, rgb(12, 168, 80) 48%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    font-weight: bold;
    font-size: 350%;
}

.header_2 {
    font-size: 200%;
}

body {
    max-width: 1440px;
    color: rgb(220, 220, 220);
    background-color: var(--background-color);
    font-family: sans-serif;
    font-size: 14px;
    /* Hide scrollbars */

}



.content {
    width: 100%;
    display: none;
    transition: 3s;
    font-size: 14px;
    background-color: var(--active-color);
    padding: 15px;


    text-align: left;
    z-index: 100;
    border-top: 1px solid #adadad;
    border-top-style: dotted;

    /*
    outline-style: solid;
    outline-width: 2px;
    outline-color: rgb(178, 178, 178);
    */
}

.indent {
    padding-left: 15px;
    width: 100%
}

.long_card_e {
    box-shadow: 0 4px 8px 0 rgba(165, 140, 189, 0.2);

    outline: none;
    border: none;
    font-size: 14px;

    padding: 15px;
    /*box-shadow: 0 4px 8px 0 rgba(152, 116, 188, 0.2);*/
    transition: 0.3s;
    width: 100%;
    text-align: center;
    /*background-color: rgba(0, 143, 200, 0.14);*/
    background-color: inherit;
    color: rgb(220, 220, 220);
    cursor: pointer;

    /*
    outline-style: solid;
    outline-width: 2px;
    outline-color: rgb(178, 178, 178);
    */
}


.long_card {
    box-shadow: 0 4px 8px 0 rgba(152, 116, 188, 0.2);

    outline: none;
    border: none;
    font-size: 14px;
    padding: 15px;
    /*box-shadow: 0 4px 8px 0 rgba(152, 116, 188, 0.2);*/
    transition: 0.3s;
    margin: 10px, 0px, 0px, 0px;
    border-radius: 5px;
    text-align: center;
    /*background-color: rgba(0, 143, 200, 0.14);*/
    background-color: inherit;
    color: rgb(220, 220, 220);
    cursor: pointer;
    width: inherit;

    /*
    outline-style: solid;
    outline-width: 2px;
    outline-color: rgb(178, 178, 178);
    */
}

.active,
.long_card:hover {
    border-radius: 0;
    box-shadow: none;
    background-color: var(--active-color);
}

.long_card_e:hover {
    background-color: var(--active-color);
}


.long_card:hover {

    /*box-shadow: 0 16px 32px 0 rgba(155, 155, 155, 0.2);*/
}



.icon_space_text {
    align-items: center;
    display: flex;
    flex-direction: row;
    gap: 12px;
}

.card {
    box-shadow: 0 4px 8px 0 rgba(152, 116, 188, 0.2);

    border-radius: 5px;
    text-align: center;
    width: 70px;
    height: 50px;
}

.card:hover {
    box-shadow: 0 16px 32px 0 rgba(186, 186, 186, 0.2);
}

.info {
    text-align: left;
}

.container {
    padding: 2px 16px;
}

.current {}


.industry {}

.technology {

    text-align: left;
    padding-left: 15px;
    width: 100%;
}

.academia {}

.row {
    display: flex;
    column-gap: 5%;
}

.col_1 {
    margin-left: 1%;
    width: 35%;
    display: flex;
    flex-direction: column;
    height: 100%;
    /* Full-height: remove this if you want "auto" height */
    /* Set the width of the sidebar */
    position: fixed;

    /* Fixed Sidebar (stay in place on scroll) */
    z-index: 1;
    /* Stay on top */
    top: 0;
    /* Stay at the top */
    left: 0;
    /* Black */
    overflow-x: hidden;
    /* Disable horizontal scroll */
    padding-top: 10px;
    border-right: 1px dashed #adadad;
    padding-right: 50px;
}

.col_2 {
    position: absolute;
    margin-left: 42%;
    width: 55%;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    overflow-x: hidden;
    justify-content: center;
}

.intro_background {}

.icons {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: center;
    gap: 8px;
}

.company_name {
    font-weight: bold;
}

a,
a:hover,
a:visited,
a:active {
    color: inherit;
    text-decoration: none;
}

.icons:hover,
.icons:visited,
.icons:active {
    color: inherit;
    text-decoration: none;
}

